--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 body {
     background-color: #d6e3c8; /* Asegura que se aplica el color de fondo */
+    font-family: 'Poppins', sans-serif; /* Asegura que se aplica la fuente */
 }
